add article image feature

--- a/app/views/articles/_form.html.slim
+++ b/app/views/articles/_form.html.slim
@@ -1,15 +1,20 @@
-= form_for @article do |f|
-  - if @article.errors.any?
-    #error_explanation
-      h2 = "#{pluralize(@article.errors.count, "error")} prohibited this article from being saved:"
-      ul
-        - @article.errors.full_messages.each do |message|
-          li = message
+.max-w-2xl.mx-auto.mb-12 class='w-1/2'
+  == simple_form_for @article do |f|
+    == f.error_notification
+    == f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
 
-  .field
-    = f.label :title
-    = f.text_field :title
-  .field
-    = f.label :text
-    = f.text_area :text
-  .actions = f.submit
+    .w-full.px-2.mb-4.-mx-2
+      = f.input :title, placeholder: 'Awesome Title', label_html: {class: 'block text-gray-700 text-sm font-bold mb-2'},
+              input_html: {class: 'block w-full px-4 py-3 leading-tight text-gray-700 bg-gray-200 border\
+               border-gray-200 rounded appearance-none focus:bg-white focus:border-gray-500 focus:outline-none'},
+              error_html: {class: 'text-red-700 leading-3 text-xs capitalize'}
+    .w-full.px-2.mb-4.-mx-2
+      = f.input :text, label_html: {class: 'block text-gray-700 text-sm font-bold mb-2'},
+              input_html: {row: '5', placeholder: 'Ignite it...reach the world!',
+                      class: 'block w-full px-4 py-3 leading-tight text-gray-700 bg-gray-200 border\
+                       border-gray-200 rounded appearance-none focus:bg-white focus:border-gray-500 focus:outline-none'}, error_html: {class: 'text-red-700 leading-3 text-xs capitalize'}
+      .w-full.px-2.mb-4.-mx-2
+        = f.input :image, as: :file, label_html: {class: 'block text-gray-700 text-sm font-bold mb-2'},
+                input_html: {class: 'block w-full px-4 py-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:bg-white focus:border-gray-500 focus:outline-none'}, error_html: {class: 'text-red-700 leading-3 text-xs capitalize'}
+    .my-12.-mx-2.px-2
+      = f.button :submit, class: 'inline-block px-8 py-4 leading-none text-white bg-orange-1000 rounded shadow hover:bg-orange-600'
