--- a/app/views/articles/index.html.slim
+++ b/app/views/articles/index.html.slim
@@ -5,6 +5,7 @@ table
     tr
       th Title
       th Text
+      th Image
       th
       th
       th
@@ -14,6 +15,7 @@ table
       tr
         td = article.title
         td = article.text
+        td = image_tag(article.image.present? ? article.image.url : 'missing.png', class: 'object-cover w-12 h-12')
         td = link_to 'Show', article
         td = link_to 'Edit', edit_article_path(article)
         td = link_to 'Destroy', article, data: { confirm: 'Are you sure?' }, method: :delete
