--- a/app/views/articles/_form.html.slim
+++ b/app/views/articles/_form.html.slim
@@ -15,6 +15,7 @@
                        border-gray-200 rounded appearance-none focus:bg-white focus:border-gray-500 focus:outline-none'}, error_html: {class: 'text-red-700 leading-3 text-xs capitalize'}
       .w-full.px-2.mb-4.-mx-2
         = f.input :image, as: :file, label_html: {class: 'block text-gray-700 text-sm font-bold mb-2'},
-                input_html: {class: 'block w-full px-4 py-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:bg-white focus:border-gray-500 focus:outline-none'}, error_html: {class: 'text-red-700 leading-3 text-xs capitalize'}
+                input_html: {class: "block w-full px-4 py-3 leading-tight text-gray-700 bg-gray-200 border border-gray-200 rounded appearance-none focus:bg-white focus:border-gray-500 focus:outline-none'}, error_html: {class: 'text-red-700 leading-3 text-xs capitalize"}
+        = mini_show(@article)
     .my-12.-mx-2.px-2
       = f.button :submit, class: 'inline-block px-8 py-4 leading-none text-white bg-orange-1000 rounded shadow hover:bg-orange-600'
