--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -1,12 +1,14 @@
-= form_for @user do |f|
-  - if @user.errors.any?
-    #error_explanation
-      h2 = "#{pluralize(@user.errors.count, "error")} prohibited this user from being saved:"
-      ul
-        - @user.errors.full_messages.each do |message|
-          li = message
+= simple_form_for(@user) do |f|
+  = f.error_notification
+  = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
 
-  .field
-    = f.label :name
-    = f.text_field :name
-  .actions = f.submit
+  .mb-4
+    = f.input :name,  label_html: { class: 'block text-gray-700 text-sm font-bold mb-2' },
+            error_html: { class: 'text-red-700 leading-3 text-xs capitalize' },
+            input_html: {class: "appearance-none block w-full py-3 px-4 leading-tight text-gray-700 bg-gray-200 \
+                                 focus:bg-white border border-gray-200 focus:border-gray-500 rounded \
+                                 focus:outline-none"},
+            placeholder: 'Your Name'
+
+  .mb-5
+    = f.button :submit, class: 'inline-block py-4 px-8 leading-none text-white bg-armadillo-500 hover:bg-armadillo-500 rounded shadow'
