add footer template

--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -12,9 +12,9 @@
       li.px-1.py-2.m-1.flex.flex-row.justify-between
         small.flex.items-center.text-gray-300 Connect with us:
         a.block.bg-orange-1000.rounded-full.w-8.h-8.flex.justify-center.align.center.mx-2 href="#"
-          = image_tag  "twitter.svg", class: 'w-6'
+          = image_tag 'twitter.svg', class: 'w-6'
         a.block.bg-orange-1000.rounded-full.w-8.h-8.flex.justify-center.align.center.mx-2 href="#"
-          = image_tag  "camera.svg", class: 'w-6'
+          = image_tag 'camera.svg', class: 'w-6'
         a.block.bg-orange-1000.rounded-full.w-8.h-8.flex.justify-center.align.center.mx-2 href="#"
-          = image_tag "facebook.svg", class: 'w-6'
+          = image_tag 'facebook.svg', class: 'w-6'
 
