--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -1,4 +1,4 @@
-.relative.bottom-0.flex.flex-row.justify-between.w-full.p-2.bg-armadillo-500.z-50
+.relative.bottom-0.flex.flex-row.justify-between.w-full.p-2.bg-armadillo-500.z-50.mt-4
   span.brand
     = image_tag('logo.svg', class: 'w-24 h-full bg-no-repeat border-none')
   ul.flex.flex-1.justify-center.items-center
