update user interface and fix minor bugs

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,7 +12,7 @@ html lang='en'
     = stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
 
-  body.bg-black.text-white
+  body.font-sans.flex.flex-col.bg-gray-900.text-gray-200
 
     include _header.html
 
