--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -1,5 +1,9 @@
-h1 Editing user
+section.py-8.min-h-75
+  div.w-full.max-w-sm.mx-auto
 
-== render 'form'
+    h1 Editing Profile
 
-=> link_to 'Back to Profile', @user
+
+    == render 'form'
+
+    => link_to 'Back to Profile', @user
