--- a/app/views/articles/edit.html.slim
+++ b/app/views/articles/edit.html.slim
@@ -1,8 +1,10 @@
-h1 Editing article
+section.py-8.min-h-75
+  div.w-full.max-w-sm.mx-auto
+    h1.text-2xl.text-center.mb-4 Editing article
 
-== render 'form'
+  == render 'form'
 
-=> link_to 'Show', @article
-'|
-=< link_to 'Back', articles_path
+  => link_to 'Show', @article
+  '|
+  =< link_to 'Back', articles_path
 
