--- a/app/views/articles/new.html.slim
+++ b/app/views/articles/new.html.slim
@@ -1,5 +1,7 @@
-h1 New article
+section.py-8.min-h-75
+  div.w-full.max-w-sm.mx-auto
+    h1.text-2xl.text-center.mb-4 New article
 
-== render 'form'
+  == render 'form'
 
-= link_to 'Back', articles_path
+  = link_to 'Back', articles_path, class: 'mx-8'
