--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -1,3 +1,9 @@
-h1 New user
+section.py-8.min-h-75
+  div.w-full.max-w-sm.mx-auto
 
-== render 'form'
+    h1 New Profile
+
+    == render 'form'
+
+
+
