--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -1,7 +1,5 @@
 = simple_form_for(@user) do |f|
-  = f.error_notification
-  = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
-
+  == error_notification(f)
   .mb-4
     = f.input :name,  label_html: { class: 'block text-gray-700 text-sm font-bold mb-2' },
             error_html: { class: 'text-red-700 leading-3 text-xs capitalize' },
